[package]
name = "vulkan-guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erupt = "0.22"
erupt-bootstrap = "0.2"
winit = "0.26"
nalgebra-glm = "0.17"
gpu-alloc = "0.5"
tobj = "3"
image = "0.24"
egui = "0.18"
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1"
thiserror = "1"
once_cell = "1"